change domain to my auth0 domain.

--- a/public/auth_config.json
+++ b/public/auth_config.json
@@ -1,5 +1,5 @@
 {
-  "domain": "dev-scgobwdm.us.auth0.com",
+  "domain": "dev-9wydozur.us.auth0.com",
   "clientId": "mLl3FvE2R77d3bupsCFaXKZrX9Rerk3O",
   "audience": "https://example.nekoruri.jp/"
 }
